# whisper-realtime

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: realtime_transcriber_benchmark.rs  recorder_benchmark.rs  vad_benchmark.rs
examples/: realtime_stream.rs
src/: assets.rs  audio_ring_buffer.rs  configs.rs  constants.rs  errors.rs  lib.rs  main.rs  microphone.rs  model.rs  preferences.rs  recorder.rs  resampler.rs  ring_buffer.rs  serialize.rs  traits.rs  transcriber.rs
src/audio/: audio_backend.rs  audio_ring_buffer.rs  loading.rs  microphone.rs  mod.rs  pcm.rs  recorder.rs  resampler.rs  utils.rs
src/downloader/: download.rs  download_progress.rs  downloader.rs  downloaders.rs  mod.rs  request.rs  traits.rs
src/transcriber/: mod.rs  offline_transcriber.rs  realtime_transcriber.rs  static_transcriber.rs  traits.rs  transcriber.rs  vad.rs
src/utils/: callback.rs  constants.rs  errors.rs  mod.rs  sender.rs
src/whisper/: configs.rs  integrity_utils.rs  mod.rs  model.rs
tests/: downloader_tests.rs  integrity_tests.rs  loader_tests.rs  model_test.rs  model_tests.rs  resampler_tests.rs  ringbuffer_tests.rs  transcriber_tests.rs  vad_tester.rs  vad_tests.rs
tests/common/: mod.rs
