[package]
name = "whisper_realtime"
# TODO: update version to 0.1.1
version = "0.1.0"
edition = "2021"
# TODO LICENSE, DESCRIPTION, DOCS, REPO

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.204", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }
rubato = { version = "0.16.2", optional = true }
whisper-rs = { version = "0.14.2", features = ["log_backend", "tracing_backend"] }
# Whisper-rs raw-api, for callback-signature function argument types: this can and will likely break, change accordingly
whisper-rs-sys = "0.12.1"
log = "0.4.21"
ctrlc = "3.4.4"
# voice_activity_detector builds without HW acceleration atm; might look into this, but speed is not an issue.
voice_activity_detector = "0.2.0"
sdl2 = "0.37.0"
reqwest = { version = "0.12.5", features = ["blocking", "stream"], optional = true }
futures = { version = "0.3.30", optional = true }
futures-util = { version = "0.3.30", optional = true }
futures-core = { version = "0.3.30", optional = true }
bytes = { version = "1.6.1", optional = true }
tokio = { version = "1.39.2", features = ["rt-multi-thread"], optional = true }
num-traits = "0.2.19"
realfft = "3.3.0"
hound = "3.5.1"
crossbeam = { version = "0.8.4", optional = true }
strum = { version = "0.27.1", features = ["derive"] }
symphonia = { version = "0.5.4", features = ["mp3", "opt-simd"] }
thiserror = "2.0.12"
url = "2.5.4"
sha2 = { version = "0.10.9", optional = true }
regex = { version = "1.11.1", optional = true }
sha1 = { version = "0.10.6", optional = true }
earshot = "0.1.0"
webrtc-vad = "0.4.0"

[dev-dependencies]
criterion = "0.5.1"
indicatif = "0.17.8"
rayon = "1.10.0"

# See: https://github.com/tazz4843/whisper-rs/blob/master/BUILDING.md for building on Windows/MacOS
[target.aarch64-apple-darwin]
rustflags = "-lc++ -l framework=Accelerate"

[target.x86_64-pc-windows-gnu]
linker = "C:\\msys64\\ucrt64\\bin\\gcc.exe"
ar = "C:\\msys64\\ucrt64\\bin\\ar.exe"

[features]
default = []
_gpu = []
crossbeam = ["dep:crossbeam"]
serde = ["dep:serde"]
downloader = ["dep:reqwest"]
integrity = ["downloader", "serde", "dep:serde_json", "dep:sha1", "dep:sha2", "dep:regex", "reqwest/json"]
downloader-async = ["downloader", "dep:tokio", "dep:bytes", "dep:futures", "dep:futures-util", "dep:futures-core"]
resampler = ["dep:rubato"]
extras = ["downloader", "resampler"]
cuda = ["whisper-rs/cuda", "_gpu"]
# openblas is Windows only, cpu acceleration.
openblas = ["whisper-rs/openblas"]
# Linux only
# ROCm support for AMD GPUs - Linux only
hipblas = ["whisper-rs/hipblas", "_gpu"]
coreml = ["whisper-rs/coreml", "_gpu"]
metal = ["whisper-rs/metal", "_gpu"]
vulkan = ["whisper-rs/vulkan", "_gpu"]
# Pass-through Symphonia feature flags.
symphonia-all = ["symphonia/all-codecs"]
symphonia-mpeg = ["symphonia/mpa"]
symphonia-aac = ["symphonia/aac"]
symphonia-alac = ["symphonia/alac"]

[[bench]]
name = "recorder_benchmark"
harness = false

[[example]]
name = "realtime_stream"
required-features = ["downloader"]

[[test]]
name = "resampler_tests"
required-features = ["resampler"]

[[test]]
name = "downloader_tests"
required-features = ["downloader-async"]

[[test]]
name = "integrity_tests"
required-features = ["integrity"]




