[package]
name = "whisper_realtime"
version = "0.1.1"
edition = "2024"
# TODO: Description
description = ""
readme = "README.md"
license = "MIT AND BSD-3 AND MPL-2.0"
repository = "https://github.com/jordan-clayton/whisper-realtime"
# TODO: up to 5 kwds
keywords = []
# TODO: up to 5 categories
categories = []
# TODO DESCRIPTION, REPO, KEYWORDS, ETC. FINISH README

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.204", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }
rubato = { version = "0.16.2", optional = true }
whisper-rs = { version = "0.14.2", features = ["log_backend", "tracing_backend"] }
# Whisper-rs raw-api, for callback-signature function argument types: this can and will likely break, change accordingly
whisper-rs-sys = "0.12.1"
log = "0.4.21"
sdl2 = "0.37.0"
reqwest = { version = "0.12.5", features = ["blocking", "stream"], optional = true }
futures = { version = "0.3.30", optional = true }
futures-util = { version = "0.3.30", optional = true }
futures-core = { version = "0.3.30", optional = true }
bytes = { version = "1.6.1", optional = true }
tokio = { version = "1.39.2", features = ["rt-multi-thread"], optional = true }
realfft = "3.3.0"
crossbeam = { version = "0.8.4", optional = true }
strum = { version = "0.27.1", features = ["derive"] }
symphonia = { version = "0.5.4", features = ["mp3", "opt-simd"] }
thiserror = "2.0.12"
url = "2.5.4"
sha2 = { version = "0.10.9", optional = true }
regex = { version = "1.11.1", optional = true }
sha1 = { version = "0.10.6", optional = true }
# voice_activity_detector builds without HW acceleration atm; might look into this, but speed is not an issue.
voice_activity_detector = "0.2.0"
earshot = "0.1.0"
webrtc-vad = "0.4.0"
parking_lot = "0.12.3"
strsim = "0.11.1"

[dev-dependencies]
criterion = "0.5.1"
indicatif = "0.17.8"
rayon = "1.10.0"
hound = "3.5.1"
ctrlc = "3.4.4"

# See: https://github.com/tazz4843/whisper-rs/blob/master/BUILDING.md for building on Windows/MacOS
[target.aarch64-apple-darwin]
rustflags = "-lc++ -l framework=Accelerate"

[target.x86_64-pc-windows-gnu]
linker = "C:\\msys64\\ucrt64\\bin\\gcc.exe"
ar = "C:\\msys64\\ucrt64\\bin\\ar.exe"

[features]
default = []
_gpu = []
crossbeam = ["dep:crossbeam"]
serde = ["dep:serde"]
downloader = ["dep:reqwest"]
integrity = ["downloader", "serde", "dep:serde_json", "dep:sha1", "dep:sha2", "dep:regex", "reqwest/json"]
downloader-async = ["downloader", "dep:tokio", "dep:bytes", "dep:futures", "dep:futures-util", "dep:futures-core"]
resampler = ["dep:rubato"]
extras = ["downloader", "resampler"]
cuda = ["whisper-rs/cuda", "_gpu"]
# openblas is Windows only, cpu acceleration.
openblas = ["whisper-rs/openblas"]
# Linux only
# ROCm support for AMD GPUs - Linux only
hipblas = ["whisper-rs/hipblas", "_gpu"]
coreml = ["whisper-rs/coreml", "_gpu"]
metal = ["whisper-rs/metal", "_gpu"]
vulkan = ["whisper-rs/vulkan", "_gpu"]
# Pass-through Symphonia feature flags.
symphonia-all = ["symphonia/all-codecs"]
symphonia-mpeg = ["symphonia/mpa"]
symphonia-aac = ["symphonia/aac"]
symphonia-alac = ["symphonia/alac"]

[[bench]]
name = "recorder_benchmark"
harness = false

[[bench]]
name = "vad_benchmark"
harness = false

[[bench]]
name = "realtime_transcriber_benchmark"
harness = false
required-features = ["resampler"]

[[example]]
name = "realtime_stream"
required-features = ["downloader"]

[[test]]
name = "transcriber_tests"
required-features = ["_gpu", "resampler"]

[[test]]
name = "resampler_tests"
required-features = ["resampler"]

[[test]]
name = "downloader_tests"
required-features = ["downloader-async"]

[[test]]
name = "integrity_tests"
required-features = ["integrity"]

[[test]]
name = "vad_tests"
required-features = ["resampler"]




