[package]
name = "ribble_whisper"
version = "0.1.1"
edition = "2024"
description = "High-level wrapper around whisper-rs features with support for realtime transcription; designed for use in GUI and TUI applications."
readme = "README.md"
license = "MIT"
repository = "https://github.com/jordan-clayton/whisper-realtime"
keywords = ["whisper", "realtime", "speech-to-text", "transcription", "audio"]
categories = ["accessibility", "multimedia::audio"]

[package.metadata]
license-notes = "Includes third-party code under MPL-2.0 and BSD-3-Clause. See LICENSE-MPL-2.0 and LICENSE-BSD-3."

[dependencies]
serde = { version = "1.0.204", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }
rubato = { version = "0.16.2", optional = true }
whisper-rs = { version = "0.14.3", features = ["log_backend", "tracing_backend"] }
whisper-rs-sys = "0.13.0"
sdl2 = "0.37.0"
reqwest = { version = "0.12.5", features = ["blocking", "stream"], optional = true }
futures = { version = "0.3.30", optional = true }
futures-util = { version = "0.3.30", optional = true }
futures-core = { version = "0.3.30", optional = true }
bytes = { version = "1.6.1", optional = true }
tokio = { version = "1.39.2", features = ["rt-multi-thread"], optional = true }
crossbeam = { version = "0.8.4", optional = true }
strum = { version = "0.27.1", features = ["derive"] }
symphonia = { version = "0.5.4", features = ["mp3", "opt-simd"] }
thiserror = "2.0.12"
url = "2.5.4"
sha2 = { version = "0.10.9", optional = true }
regex = { version = "1.11.1", optional = true }
sha1 = { version = "0.10.6", optional = true }
# Until voice_activity_detector is updated to address breaking changes in the
# ort crate, these two crates need to be pinned to the following versions.
ort-sys = "=2.0.0-rc.9"
ort = { version = "=2.0.0-rc.9", features = ["ndarray"] }
voice_activity_detector = "0.2.0"
earshot = "0.1.0"
webrtc-vad = "0.4.0"
parking_lot = "0.12.3"
strsim = "0.11.1"

[dev-dependencies]
criterion = "0.6.0"
indicatif = "0.17.8"
hound = "3.5.1"
ctrlc = "3.4.4"

[target.aarch64-apple-darwin]
rustflags = "-lc++ -l framework=Accelerate"

[target.x86_64-pc-windows-gnu]
linker = "C:\\msys64\\ucrt64\\bin\\gcc.exe"
ar = "C:\\msys64\\ucrt64\\bin\\ar.exe"

[features]
default = []
all = ["downloader-async", "resampler", "integrity", "crossbeam", "serde"]
_gpu = []
crossbeam = ["dep:crossbeam"]
serde = ["dep:serde"]
downloader = ["dep:reqwest"]
integrity = ["downloader", "serde", "dep:serde_json", "dep:sha1", "dep:sha2", "dep:regex", "reqwest/json"]
downloader-async = ["downloader", "dep:tokio", "dep:bytes", "dep:futures", "dep:futures-util", "dep:futures-core"]
resampler = ["dep:rubato"]
# whisper-rs passthrough features:
cuda = ["whisper-rs/cuda", "_gpu"]
openblas = ["whisper-rs/openblas"]
hipblas = ["whisper-rs/hipblas", "_gpu"]
coreml = ["whisper-rs/coreml", "whisper-rs/metal", "_gpu"]
metal = ["whisper-rs/metal", "_gpu"]
vulkan = ["whisper-rs/vulkan", "_gpu"]
log_backend = ["whisper-rs/log_backend"]
tracing_backend = ["whisper-rs/tracing_backend"]
# symphonia passthrough features:
symphonia-all = ["symphonia/all-codecs", "symphonia/all-formats"]
symphonia-mpeg = ["symphonia/mpa"]
symphonia-aac = ["symphonia/aac", "symphonia/isomp4"]
symphonia-alac = ["symphonia/alac", "symphonia/isomp4", "symphonia/caf", "symphonia/aiff"]
symphonia-simd = ["symphonia/opt-simd"]

[[bench]]
name = "recorder_benchmark"
harness = false

[[bench]]
name = "vad_benchmark"
harness = false

[[bench]]
name = "realtime_transcriber_benchmark"
harness = false
required-features = ["resampler"]

[[example]]
name = "realtime_stream"
required-features = ["downloader"]

[[test]]
name = "transcriber_tests"
required-features = ["_gpu", "resampler"]

[[test]]
name = "resampler_tests"
required-features = ["resampler"]

[[test]]
name = "downloader_tests"
required-features = ["downloader-async"]

[[test]]
name = "integrity_tests"
required-features = ["integrity"]

[[test]]
name = "vad_tests"
required-features = ["resampler"]




